# stock-analyzer-skill

./: .claude.json  .coveragerc  .flake8  .gitignore  .markdownlint.json  .npmignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  install-plugin.js  install.sh  methodology.md  mypy.ini  package.json  pyproject.toml  workflow.md
.agents/skills/: backtest.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: help  init-pool  investment-researcher  portfolio
.codex/skills/: financial-analyst  market  screener  sector  technical
.github/workflows/: changelog.yml  ci.yml  docs.yml  release.yml
data/: a_share_holidays.json  expert_calibration.json  portfolio_example.json  sector_etf.csv  sector_mapping.json  sector_stocks.json
docs/: 01_Screener_V2_Master_Plan.md  02_Strategy_Engine_Design.md  03_Market_Regime_Design.md  INDEX.md  SPRINT_SUMMARY.md  api-reference.md  architecture-review-2026-07-07.md  book.toml  deep-review-2026-07-15.md  developer-guide.md  full-module-review-2026-07-02.md  implementation-plan-2026-q3-q4.md  implementation-plan.md  improvement-roadmap.md  methodology.md  optimization-report.md  persona.md  product-architecture.md  quick-start.md  review-issues.md  review-verification.md  screener-review.md  skill-consolidation-plan.md  test_report_600989.md  user-guide.md  user_expert.md  visual_expert.md
docs/adr/: ADR-001-零外部依赖原则.md  (+4 more)
experts/: README.md  __init__.py  backtest_mapping.md  buffett.md  calibration.py  chaogu_yangjia.md  decide.md  decide.py  duan_yongping.md  emotion_tech.md  formatter.py  institution.md  lynch.md  market_detector.py  momentum_trader.md  registry.py  risk_manager.md  scoring.py  sector_specialist.md  soros.md  topic_leader.md  types.py  value_anchor.md  value_institution.md  veto_evaluator.py  vote_engine.py  xu_xiang.md  yaml_loader.py  zhao_laoge.md  zuoshou_xinyi.md
scripts/: announcements.py  backtest.py  calibration.py  calibration_backfill.py  calibration_sync.py  chan.py  chip.py  classifier.py  common.py  demo.sh  events.py  finance.py  hot_rank.py  industry_beta.py  init_pool.py  kline.py  macro_indicators.py  market_anchor.py  market_breadth.py  monitor.py  multi_stock_backtest.py  patterns_local.py  perf_bench.py  portfolio_correlation.py  portfolio_web.py  quote.py  refresh_pool.py  screener.py  sector.py  sector_etf_strength.py  snapshots.py  stock.py  strategy_performance.py  technical.py
tests/: FRAMEWORK.md  README_TEST_NAMING.md  conftest.py  smoke_test.sh  test_alert_engine_extra.py  test_alert_engine_unit.py  test_alert_engine_unit_extra.py  test_analyst_factor.py  test_announcements.py  test_announcements_final.py  test_announcements_final2.py  test_announcements_final3.py  test_backtest.py  test_backtest_cli.py  test_backtest_cli_coverage.py  test_backtest_engine_final.py  test_backtest_engine_regime.py  test_backtest_metrics_coverage.py  test_backtest_report.py  test_backtest_report_extra.py  test_backtest_visualize.py  test_backtest_wrapper.py  test_baostock_kline_coverage.py  test_beichi_coverage.py  test_beichi_final2.py  test_briefing_coverage.py  test_brinson.py  test_business.py  test_cache_concurrency.py  test_cache_coverage.py  test_cache_fixes.py  test_calibration.py  test_calibration_backfill.py  test_calibration_backfill_final.py  test_calibration_extended.py  test_calibration_sync.py  test_calibration_sync_extra.py  test_chan.py  test_chan_wrapper.py  test_channels.py  (+254 more)
(+437 files in other folders)
