[project]
name = "stock-analyzer-skill"
version = "1.14.2"
description = "A-share stock analyzer Claude Code plugin"
requires-python = ">=3.11"

[project.optional-dependencies.test]
pytest = ">=8.0"
pytest-xdist = ">=3.0"
pytest-timeout = ">=2.0"
pytest-cov = ">=4.0"
hypothesis = ">=6.0"
pyyaml = ">=6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests requiring network access (deselect with '-m \"not network\"')",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
    "unit: marks unit tests",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E402: module level import not at top of file — 项目内大量 forward reference 模式合法
# F401: unused-import — __init__.py re-export 模式有意为之
extend-ignore = [
    "E402",
    "F401",
]
