[project]
name = "stock-analyzer-skill"
version = "1.14.2"
description = "A-share stock analyzer Claude Code plugin"
requires-python = ">=3.11"

# 已知限制：akshare 是可选依赖（fetcher 层 try: import akshare 模式），
# 其传递依赖 py_mini_racer 在 Python 3.14 报 DeprecationWarning（_pack_ 无 _layout_），
# Python 3.19 起升级为 error。届时 akshare 导入会失败，HAS_AKSHARE=False，
# akshare 系列 fetcher 自动降级为不可用（不崩溃，但丢失该数据源）。
# 这是上游 py_mini_racer/akshare 的问题，项目无法直接修复；
# 可选依赖模式已隔离影响——未安装 akshare 的环境完全不受影响。
# 解决时机：等上游 py_mini_racer 发布适配 3.19 的版本后，用户升级即可。

[project.optional-dependencies.test]
pytest = ">=8.0"
pytest-xdist = ">=3.0"
pytest-timeout = ">=2.0"
pytest-cov = ">=4.0"
hypothesis = ">=6.0"
pyyaml = ">=6.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests requiring network access (deselect with '-m \"not network\"')",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
    "unit: marks unit tests",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E402: module level import not at top of file — 项目内大量 forward reference 模式合法
# F401: unused-import — __init__.py re-export 模式有意为之
extend-ignore = [
    "E402",
    "F401",
]
