[project]
name = "stock-analyzer-skill"
version = "1.16.0"
description = "A-share stock analyzer Claude Code plugin"
requires-python = ">=3.11"

# 已知限制：akshare 是可选依赖（fetcher 层 try: import akshare 模式），
# 其传递依赖 py_mini_racer 在 Python 3.14 报 DeprecationWarning（_pack_ 无 _layout_），
# Python 3.19 起升级为 error。届时 akshare 导入会失败，HAS_AKSHARE=False，
# akshare 系列 fetcher 自动降级为不可用（不崩溃，但丢失该数据源）。
# 这是上游 py_mini_racer/akshare 的问题，项目无法直接修复；
# 可选依赖模式已隔离影响——未安装 akshare 的环境完全不受影响。
# 解决时机：等上游 py_mini_racer 发布适配 3.19 的版本后，用户升级即可。

[project.optional-dependencies.test]
pytest = ">=8.0"
pytest-xdist = ">=3.0"
pytest-timeout = ">=2.0"
pytest-cov = ">=4.0"
hypothesis = ">=6.0"
pyyaml = ">=6.0"
respx = ">=0.21"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-ra --strict-markers"
markers = [
    "unit: 纯函数/单类单元测试",
    "integration: 跨模块集成测试",
    "e2e: 端到端 CLI 测试",
    "contracts: schema/yaml 合约测试",
    "slow: 慢速测试",
    "network: 需要真实网络访问（默认 skip）",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E402: module level import not at top of file — 项目内大量 forward reference 模式合法
# F401: unused-import — __init__.py re-export 模式有意为之
extend-ignore = [
    "E402",
    "F401",
]